# GEMM-Kernels

./: .gitignore  CMakeLists.txt  README.md
docs/: project_documentation.md  theory_and_implementation.md
include/: gemm.h
src/: gemm_cpu.cpp  gemm_cuda.cu  main.cpp
